adguard/adguard/adguard-service.yml
apiVersion: v1
kind: Service
metadata:
  name: adguard
  namespace: adguard
spec:
  selector:
    app: adguard
  ports:
  - protocol: TCP
    port: 3000
    targetPort: 3000
    name: http-initial
  - protocol: UDP
    port: 53
    targetPort: 53
    name: dns
  - protocol: TCP
    port: 53
    targetPort: 53
    name: dnstcp
  type: LoadBalancer
  loadBalancerIP: 192.168.77.54
