adguard/adguard/ingress-adguard.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: adguard
  namespace: adguard
  annotations:
    cert-manager.io/cluster-issuer: cloudflare
spec:
  ingressClassName: nginx
  rules:
  - host: adguard.mgmt.sholdee.net
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: adguard-http
              port:
                name: http
  tls:
  - hosts:
    - adguard.mgmt.sholdee.net
    secretName: adguard-tls-secret
