adguard/adguard/adguard-network.yml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: adguard
  namespace: adguard
spec:
  endpointSelector:
    matchLabels:
      app: adguard
  ingress:
    - fromCIDRSet:
        - cidr: 192.168.99.0/24
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: ingress-nginx
            io.kubernetes.pod.namespace: ingress-nginx
      toPorts:
        - ports:
            - port: "80"
              protocol: TCP
    - fromEndpoints:
        - matchLabels:
            app: adguard-slave
      toPorts:
        - ports:
            - port: "80"
              protocol: TCP
  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
          rules:
            dns:
              - matchPattern: "*"
    - toEntities:
        - world
      toPorts:
        - ports:
            - port: "853"
              protocol: TCP
        - ports:
            - port: "443"
              protocol: TCP
        - ports:
            - port: "53"
              protocol: UDP
